2. Fixing a bug involving type-checking variadic functions
3. Fixing a bug involving solving top-level constraints
4. $ATSHOME/libc/SATS/complex.sats and $ATSHOME/libc/DATS/complex.dats
   are compiled and then added to libats.a
5. Adding support for #undef
6. Thoroughly testing the support for ATS running on Cygwin
7. Implementing libats/vector (dynamically resizable vectors)

########################################################################

ats-lang-anairiats-0.2.1:

1. The support for 'atsopt --depgen' is revamped.
2. The support for boolean patterns is made available.
3. Most string-generating functions now return linear strings
   (strptr). This is a change that can have pervasive impact.
4. Some support for GMP/MPQ and GMP/MPF functions are added. See
   libc/SATS/gmp.sat for details.
5. Overhauling the ATS building system (Yuri D'Elia).

########################################################################

ats-lang-anairiats-0.2.0:

This is a milestone release. The original plan for OOP support in ATS
has been scratched completely, resulting in about 1500 lines of code being
removed. Instead, some support is added to interface ATS with external
code written in OOP-style.

The following libraries are now available for use:

contrib/glib
contrib/cairo
contrib/pango
contrib/X11
contrib/GTK
contrib/GL (OpenGL, GLU and GLUT)
contrib/SDL

Much more effort is needed to expand the APIs for these libraries. So far,
only the APT for cairo is close to completion.

########################################################################

ats-lang-anairiats-0.1.9:

(*
// this feature is retracted as it is difficult to support
1. overloaded symbols in a macro definition is re-loaded when the macro
   definition is expanded. This change can greatly facilitate the use of
   macros defined in $ATSHOME/prelude/macrodef.sats

2. macro expansion is now handled by [d1exp_tr] in [ats_trans2_dyn1.dats]
   (instead of being done by [d2exp_tr] in [ats_trans3_dyn2.dats])