@@ -1,10 +1,19 @@
-all: \
-  fsize \
+#
+#
+# Makefile for K&R examples in Chapter 8
+#
+#
 
 ######
 
-ATSCC=$(or $(ATSHOME), "/usr")/bin/atscc
-ATSOPT=$(or $(ATSHOME), "/usr")/bin/atsopt
+ATSHOMEQ=$(or "$(ATSHOME)", "/usr")
+ATSCC=$(ATSHOMEQ)/bin/atscc
+ATSOPT=$(ATSHOMEQ)/bin/atsopt
+
+######
+
+all: \
+  fsize \
 
 ######
 
