@@ -54,6 +54,7 @@ compall:: \
   problem35 \
   problem36 \
   problem37 \
+  problem38 \
   problem40 \
   problem41 \
   problem43 \
@@ -113,6 +114,7 @@ problem34::; make -C PE-problem34 compall
 problem35::; make -C PE-problem35 compall
 problem36::; make -C PE-problem36 compall
 problem37::; make -C PE-problem37 compall
+problem39::; make -C PE-problem39 compall
 problem40::; make -C PE-problem40 compall
 problem41::; make -C PE-problem41 compall
 problem43::; make -C PE-problem43 compall
@@ -173,6 +175,7 @@ cleanall::
 	make -C PE-problem35 cleanall
 	make -C PE-problem36 cleanall
 	make -C PE-problem37 cleanall
+	make -C PE-problem39 cleanall
 	make -C PE-problem40 cleanall
 	make -C PE-problem41 cleanall
 	make -C PE-problem43 cleanall
