@@ -56,6 +56,8 @@ Problem33:
 Problem34:
 Problem35:
 Problem36:
+Problem37:
+Problem39:
 Problem40:
 Problem41:
 Problem43:
