@@ -29,9 +29,12 @@ macdef size1 (x) = size1_of_int1 ,(x)
 
 implement main () = () where {
   #define N 10
+  #define M %(N+N)
   typedef T = double
   var V: VSHELL0 // unintialized
   val () = $V.vector_initialize<double> (V, N)
+  val () = $V.vector_resize (V, M)
+//
   val () = loop (V, 0) where {
     fun loop {m,n:int}
       {i:nat | i <= N; n+N <= m+i} .<N-i>. (
@@ -45,7 +48,7 @@ implement main () = () where {
 //
   var i: natLte (N)
   val () = for*
-    (V: VECTOR (T, N, N)) => (i := 0; i < N; i := i+1)
+    (V: VECTOR (T, M, N)) => (i := 0; i < N; i := i+1)
     (printf ("V[%i] = %.1f\n", @(i, $V.vector_get_elt_at (V, (size1)i))))
 //
   val () = loop (V, 0) where {
